--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <title>Contacts 27 Homepage</title>
+    
+  <div class="p-3 mb-2 bg-dark text-white"><h4>contacts27</h4></div>
+  <title>contacts27 homepage</title>
   </head>
   <body>
     <div class="wrapper fadeInDown">
       <div id="formContent">
         <div class="fadeIn first">
-          <p class="title">Contacts 27 Homepage</p>
+          <p class="title">please sign in to access.</p>
         </div>
         <form>
-          <input type="text" id="login" class="fadeIn second" name="login" value="Login" onfocus="clearText(this, 'Login')" onblur="regenerateText(this, 'Login')"/>
-          <input type="text" id="password" class="fadeIn third" name="login" value="Password" onfocus="clearText(this, 'Password')" onblur="regenerateText(this, 'Password')"/>
-          <input type="submit" class="fadeIn fourth" value="Log In"/>
+          <input type="text" id="login" class="fadeIn second" name="login" placeholder="username">
+          <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+          <input type="submit" class="fadeIn fourth" value="enter">
         </form>
+        </div>
       </div>
     </div>
 
@@ -31,6 +33,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
   </body>
 </html>
